my-infra/template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "AWS Infra Generator - VPC + EC2 + S3 stack (CloudFormation)",

  "Parameters": {
    "ProjectName": {
      "Type": "String",
      "Default": "my-infra",
      "Description": "Prefix for all resource names"
    },
    "Environment": {
      "Type": "String",
      "Default": "development",
      "AllowedValues": ["development", "staging", "production"],
      "Description": "Deployment environment"
    },
    "InstanceType": {
      "Type": "String",
      "Default": "t3.micro",
      "AllowedValues": ["t3.micro", "t3.small", "t3.medium", "t3.large"],
      "Description": "EC2 instance type"
    },
    "RootVolumeSize": {
      "Type": "Number",
      "Default": 30,
      "MinValue": 30,
      "Description": "Root EBS volume size in GB (min 30 for Amazon Linux 2023)"
    },
    "AllowedSSHCidr": {
      "Type": "String",
      "Default": "0.0.0.0/0",
      "Description": "CIDR block allowed SSH access - restrict to your IP in production"
    },
    "VpcCidr": {
      "Type": "String",
      "Default": "10.0.0.0/16",
      "Description": "CIDR block for the VPC"
    },
    "S3BucketSuffix": {
      "Type": "String",
      "Default": "data",
      "Description": "Suffix for the S3 bucket name"
    }
  },

  "Mappings": {
    "AmazonLinux2023": {
      "us-east-1":      { "AMI": "ami-0c02fb55956c7d316" },
      "us-east-2":      { "AMI": "ami-0b8b44ec9a8f90422" },
      "us-west-1":      { "AMI": "ami-0ce2cb35386fc22e9" },
      "us-west-2":      { "AMI": "ami-008fe2fc65df48dac" },
      "eu-west-1":      { "AMI": "ami-0694d931cee176e7d" },
      "eu-west-2":      { "AMI": "ami-0eb260c4d5475b901" },
      "eu-central-1":   { "AMI": "ami-06dd92ecc74fdfb36" },
      "ap-south-1":     { "AMI": "ami-06489866022e12a14" },
      "ap-southeast-1": { "AMI": "ami-0df7a207adb9748c7" },
      "ap-northeast-1": { "AMI": "ami-0dba2cb6798deb6d8" }
    }
  },

  "Resources": {

    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": { "Ref": "VpcCidr" },
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true,
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${ProjectName}-${Environment}-vpc" } },
          { "Key": "Project", "Value": { "Ref": "ProjectName" } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "ManagedBy", "Value": "cloudformation" }
        ]
      }
    },

    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${ProjectName}-${Environment}-igw" } },
          { "Key": "Project", "Value": { "Ref": "ProjectName" } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } }
        ]
      }
    },

    "VPCGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "InternetGatewayId": { "Ref": "InternetGateway" }
      }
    },

    "PublicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "CidrBlock": "10.0.0.0/24",
        "AvailabilityZone": { "Fn::Select": [0, { "Fn::GetAZs": "" }] },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${ProjectName}-${Environment}-public-1" } },
          { "Key": "Type", "Value": "Public" }
        ]
      }
    },

    "PublicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": { "Fn::Select": [1, { "Fn::GetAZs": "" }] },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${ProjectName}-${Environment}-public-2" } },
          { "Key": "Type", "Value": "Public" }
        ]
      }
    },

    "PrivateSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "CidrBlock": "10.0.10.0/24",
        "AvailabilityZone": { "Fn::Select": [0, { "Fn::GetAZs": "" }] },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${ProjectName}-${Environment}-private-1" } },
          { "Key": "Type", "Value": "Private" }
        ]
      }
    },

    "PrivateSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "CidrBlock": "10.0.11.0/24",
        "AvailabilityZone": { "Fn::Select": [1, { "Fn::GetAZs": "" }] },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${ProjectName}-${Environment}-private-2" } },
          { "Key": "Type", "Value": "Private" }
        ]
      }
    },

    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${ProjectName}-${Environment}-public-rt" } }
        ]
      }
    },

    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "VPCGatewayAttachment",
      "Properties": {
        "RouteTableId": { "Ref": "PublicRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "InternetGateway" }
      }
    },

    "PublicSubnet1RouteAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnet1" },
        "RouteTableId": { "Ref": "PublicRouteTable" }
      }
    },

    "PublicSubnet2RouteAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnet2" },
        "RouteTableId": { "Ref": "PublicRouteTable" }
      }
    },

    "EC2SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for EC2 instances",
        "VpcId": { "Ref": "VPC" },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": { "Ref": "AllowedSSHCidr" },
            "Description": "SSH access"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0",
            "Description": "HTTP"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "CidrIp": "0.0.0.0/0",
            "Description": "HTTPS"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound"
          }
        ],
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${ProjectName}-${Environment}-ec2-sg" } },
          { "Key": "Project", "Value": { "Ref": "ProjectName" } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } }
        ]
      }
    },

    "EC2IAMRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": { "Service": "ec2.amazonaws.com" },
              "Action": "sts:AssumeRole"
            }
          ]
        },
        "ManagedPolicyArns": [
          "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
        ],
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${ProjectName}-${Environment}-ec2-role" } },
          { "Key": "Project", "Value": { "Ref": "ProjectName" } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } }
        ]
      }
    },

    "EC2InstanceProfile": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Roles": [{ "Ref": "EC2IAMRole" }]
      }
    },

    "EC2Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": {
          "Fn::FindInMap": ["AmazonLinux2023", { "Ref": "AWS::Region" }, "AMI"]
        },
        "InstanceType": { "Ref": "InstanceType" },
        "SubnetId": { "Ref": "PublicSubnet1" },
        "SecurityGroupIds": [{ "Ref": "EC2SecurityGroup" }],
        "IamInstanceProfile": { "Ref": "EC2InstanceProfile" },
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/xvda",
            "Ebs": {
              "VolumeSize": { "Ref": "RootVolumeSize" },
              "VolumeType": "gp3",
              "Encrypted": true,
              "DeleteOnTermination": true
            }
          }
        ],
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${ProjectName}-${Environment}-instance-1" } },
          { "Key": "Project", "Value": { "Ref": "ProjectName" } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "ManagedBy", "Value": "cloudformation" }
        ]
      }
    },

    "S3Bucket": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "BucketName": {
          "Fn::Sub": "${ProjectName}-${Environment}-${S3BucketSuffix}-${AWS::AccountId}"
        },
        "VersioningConfiguration": {
          "Status": "Enabled"
        },
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256"
              }
            }
          ]
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true
        },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${ProjectName}-${Environment}-${S3BucketSuffix}" } },
          { "Key": "Project", "Value": { "Ref": "ProjectName" } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } }
        ]
      }
    }

  },

  "Outputs": {
    "VPCId": {
      "Description": "VPC ID",
      "Value": { "Ref": "VPC" },
      "Export": { "Name": { "Fn::Sub": "${ProjectName}-${Environment}-vpc-id" } }
    },
    "PublicSubnet1Id": {
      "Description": "Public Subnet 1 ID",
      "Value": { "Ref": "PublicSubnet1" }
    },
    "PublicSubnet2Id": {
      "Description": "Public Subnet 2 ID",
      "Value": { "Ref": "PublicSubnet2" }
    },
    "PrivateSubnet1Id": {
      "Description": "Private Subnet 1 ID",
      "Value": { "Ref": "PrivateSubnet1" }
    },
    "PrivateSubnet2Id": {
      "Description": "Private Subnet 2 ID",
      "Value": { "Ref": "PrivateSubnet2" }
    },
    "EC2InstanceId": {
      "Description": "EC2 Instance ID",
      "Value": { "Ref": "EC2Instance" }
    },
    "EC2PublicIP": {
      "Description": "EC2 Public IP Address",
      "Value": { "Fn::GetAtt": ["EC2Instance", "PublicIp"] }
    },
    "S3BucketName": {
      "Description": "S3 Bucket Name",
      "Value": { "Ref": "S3Bucket" }
    },
    "S3BucketArn": {
      "Description": "S3 Bucket ARN",
      "Value": { "Fn::GetAtt": ["S3Bucket", "Arn"] }
    }
  }
}
